# CSFLite

./: -omit-raw  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  pyproject.toml  usage.md
.github/workflows/: python-lint.yaml
claude-project/: project.yaml  seed-document.md
config/: path_config.json
csflite/: controls.json
data/: .~lock.csf_lookup.csv#  .~lock.heat_map_lookup.csv#  .~lock.nuclei_csf_lookup.csv#  csf_lookup.csv  csf_lookup.json  heat_map_lookup.csv  mapped-findings.csv  mapping_rules.yaml  nuclei_csf_lookup.csv  nuclei_csf_lookup.json  profiles.yaml  targets.txt
docs/: CONTRIBUTING.md  GETTING_STARTED.md  assessment_philosophy.md  automatable_sub_categories.md  development_roadmap.md  manual_questionaire.md  manual_remediation.md  nuclei_csf_rule_mapping.md  nuclie_to_csf_mapping.md  top_25_sub_categories.md  usage.md
docs/adr/: ADR-0001-full-csf-crosswalk.md
input/: ava_manual_gov_check.csv  sample_output.json
output/: .~lock.governance_assessment.csv#  .~lock.governance_heatmap.csv#  .~lock.heatmap.csv#  .~lock.mapped-findings.csv#  ava_gov_assess.csv  findings.csv  governance_assessment.csv  governance_heatmap.csv  heatmap.bak  heatmap.csv  mapped-findings.json  nuclei_inventory_converted.json  nuclei_scan_findings.json  scan-findings.csv  scan_heatmap.csv
roadmap/: development_roadmap.md
scans/: .~lock.governance_checks.csv#  governance_checks.csv  juice_shop_baseline_web_old.json  nuclei_baseline_web.json  nuclei_baseline_web_ommit_raw.json  nuclei_inventory.json  nuclei_inventory.jsonl  nuclei_raw_sample.json  sample_output.json
templates/: .~lock.governance_checks_template.csv#  governance_checks_template.csv  hipaa-supplement-questionnaire.csv  nuclei-csf-index.csv  soc2-supplement-questionnaire.csv
tests/: nuclei_json_converter.py  test_assess.py  test_assess_helpers.py  test_csf_rule_mapper.py  test_global_helpers.py  test_integration_csf_mapping.py  test_nuc2csf.py  test_nuclei_helpers.py  test_nuclei_json_converter.py
tools/: assess.py  assess_helpers.py  covert_nuclei_json.py  csf_rule_mapper.py  global_helpers.py  governance_check.py  map_nuclie_to_csf.py  mapping_helpers.py  nuc2csf.py  nuclei2csf.py  nuclei_convert_tool.py  nuclei_csf_mapper_tool.py  nuclei_helpers.py  nuclei_json_converter.py  nuclei_scan_tool.py
(+15 files in other folders)
