[tool.poetry]
name = "csflite"
version = "0.1.0"
description = ""
authors = ["Erik Lacson <elacson@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

packages = [
    { include = "tools" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.1"
pandas = "^2.3.1"
numpy = "^2.3.2"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.8"
bandit = "^1.8.6"
pre-commit = "^4.2.0"
pytest = "^8.4.1"

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "S", "PT"]
ignore = ["E501"]

# Allow asserts in tests
per-file-ignores = { "tests/**.py" = ["S101"] }

[tool.bandit]
skips = ["B101"]    # assert-used outside tests